--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,17 @@
             <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>2.12.0</version>
+            </plugin>
+        </plugins>
+
+    </build>
 
 </project>
